// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baselineSource renders 0 1`] = `
Array [
  .c0 {
  baseline-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders function 1`] = `
Array [
  .c0 {
  baseline-source: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: has;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: has;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders invalid theme path 1`] = `
Array [
  .c0 {
  baseline-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders negative number 1`] = `
Array [
  .c0 {
  baseline-source: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  baseline-source: July;
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: July;
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    baseline-source: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    baseline-source: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    baseline-source: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    baseline-source: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  baseline-source: July;
}

@media May {
  .c0 {
    baseline-source: August;
  }
}

@media April {
  .c0 {
    baseline-source: September;
  }
}

@media January {
  .c0 {
    baseline-source: November;
  }
}

@media April {
  .c0 {
    baseline-source: August;
  }
}

@media June {
  .c0 {
    baseline-source: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: July;
}

@media May {
  .c0 {
    baseline-source: August;
  }
}

@media April {
  .c0 {
    baseline-source: September;
  }
}

@media January {
  .c0 {
    baseline-source: November;
  }
}

@media April {
  .c0 {
    baseline-source: August;
  }
}

@media June {
  .c0 {
    baseline-source: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-source: November;
  }
}

@media April {
  .c0 {
    baseline-source: January;
  }
}

@media January {
  .c0 {
    baseline-source: December;
  }
}

@media April {
  .c0 {
    baseline-source: April;
  }
}

@media June {
  .c0 {
    baseline-source: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-source: November;
  }
}

@media April {
  .c0 {
    baseline-source: January;
  }
}

@media January {
  .c0 {
    baseline-source: December;
  }
}

@media April {
  .c0 {
    baseline-source: April;
  }
}

@media June {
  .c0 {
    baseline-source: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    baseline-source: July;
  }
}

@media April {
  .c0 {
    baseline-source: August;
  }
}

@media January {
  .c0 {
    baseline-source: September;
  }
}

@media April {
  .c0 {
    baseline-source: November;
  }
}

@media June {
  .c0 {
    baseline-source: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    baseline-source: July;
  }
}

@media April {
  .c0 {
    baseline-source: August;
  }
}

@media January {
  .c0 {
    baseline-source: September;
  }
}

@media April {
  .c0 {
    baseline-source: November;
  }
}

@media June {
  .c0 {
    baseline-source: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-source: January;
  }
}

@media April {
  .c0 {
    baseline-source: December;
  }
}

@media January {
  .c0 {
    baseline-source: April;
  }
}

@media April {
  .c0 {
    baseline-source: May;
  }
}

@media June {
  .c0 {
    baseline-source: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    baseline-source: January;
  }
}

@media April {
  .c0 {
    baseline-source: December;
  }
}

@media January {
  .c0 {
    baseline-source: April;
  }
}

@media April {
  .c0 {
    baseline-source: May;
  }
}

@media June {
  .c0 {
    baseline-source: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders postitive number 1`] = `
Array [
  .c0 {
  baseline-source: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders string 1`] = `
Array [
  .c0 {
  baseline-source: July;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: July;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: June;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: June;
}

<div
    className="c0"
  />,
]
`;

exports[`baselineSource renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`baselineSource renders valid theme path 1`] = `
Array [
  .c0 {
  baseline-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  baseline-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
